[package]
authors = ["Brad Gibson <brad@humanenginuity.com>"]
categories = []
edition = "2018"
keywords = []
license = "MIT OR Apache-2.0"
name = "hello_world"
readme = "README.md"
repository = "https://github.com/u007d/hello_world"
version = "0.1.0"

[dependencies]
riscv-rt = "0.6.1"
k210-hal = "0.1.0"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "abort"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false
